# terraform-aws-lambda-layer-builder

./: .copier-answers.yml  .gitignore  .project_config.yml  CODEOWNERS  README.md  archives.tf  cloudwatch.tf  copier.yaml  data.tf  iam.tf  iam_policies.tf  kms.tf  lambda.tf  locals.tf  main.tf  outputs.tf  providers.tf  s3.tf  variables.tf
.config/: .checkov.yml
.config/functional_tests/: pre-entrypoint-helpers.sh
.project_automation/functional_tests/: Dockerfile  entrypoint.sh
.project_automation/publication/: Dockerfile
.project_automation/static_tests/: Dockerfile  entrypoint.sh  static_tests.sh
.project_type_automation/functional_tests/: Dockerfile
.project_type_automation/init/: Dockerfile  entrypoint.sh
.project_type_automation/publication/: entrypoint.sh
.project_type_automation/static_tests/: Dockerfile
.project_type_automation/update/: Dockerfile  entrypoint.sh  update.py
examples/basic/: main.tf  outputs.tf  variables.tf
lambda/: mypy.ini  pyproject.toml
lambda/src/: lambda_function.py
project/: archives.tf  cloudwatch.tf  context.tf  iam.tf  iam_policies.tf  kms.tf  lambda.tf  locals.tf  outputs.tf  s3.tf  variables.tf  {{_copier_conf.answers_file}}.jinja  {{version_file}}.jinja
project/.project_automation/functional_tests/: Dockerfile
project/examples/basic/: main.tf  outputs.tf  variables.tf
project/lambda/: pyproject.toml
project/lambda/src/: lambda_function.py
project/test/: basic_test.go  example_main_test.go
test/: example_main_test.go  main.tftest.hcl
tests/: 01_mandatory.tftest.hcl
