[project]
name = "terraform_aws_lambda_layer_builder"
version = "2.0.0"
description = "Solution to build Python Lambda Layers"
authors = [
    {name = "Albert Silva",email = "albsilv@amazon.com"}
]
readme = "../README.md"
requires-python = ">=3.9,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
aws-lambda-powertools = "^3.5.0"
boto3 = "^1.36.9"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.0"
black = "^25.1.0"
mypy = "^1.14.1"
pylint = "^3.3.4"
bandit = "^1.8.2"
mypy-boto3-s3 = "^1.36.9"
setuptools = "^75.8.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
poetry-plugin-shell = ">=1.0.1"